@@ -1,11 +1,16 @@
 2014-07-09  Ramon Casero  <rcasero@gmail.com>
 
+	* Add matlab/CardiacToolbox/blockface_imread_gray.m (0.1.0)
+
+	- BLOCKFACE_IMREAD_GRAY Read multiple image files into grayscale
+	volume.
+
 	* CardiacToolbox/blockface_create_masks.m (0.1.1)
 
 	- Fix bug. We need a wait() to that user can reposition or modify
 	the ellipse and polygon.
 
-	* Add CardiacToolbox/blockface_create_masks.m (0.1.0)
+	* Add matlab/CardiacToolbox/blockface_create_masks.m (0.1.0)
 
 	- BLOCKFACE_CREATE_MASK User interface to create the elliptical
 	and polygonal segmentation masks used to correct blockface
